<resources>
    <string name="app_name">Aston intensive</string>
    <string name="subtitle_text">Разработка программного обеспечения</string>
    <string name="about_us">О нас:</string>
    <string name="description_text">Aston - компания по разработке ПО с полным циклом услуг. Уже 15 лет мы помогаем заказчикам по всему миру трансформировать бизнес, создавая эффективные мобильные и десктопные решения.</string>
    <string name="office_title">Офисы</string>
    <string name="moscow">Москва</string>
    <string name="kazan">Казань</string>
    <string name="rostov">Ростов-на-Дону</string>
    <string name="minsk">Минск</string>
    <string name="contacts_text">Контакты</string>
    <string name="gallery_btn_text">Галерея</string>
    <string name="vacancies">Вакансии</string>
    <string name="gomel">Гомель</string>
    <string name="trainee_logo_desc">tranee_logo_desc</string>
    <string name="trainee_title" translatable="false">Android trainee</string>
    <string name="trainee_subtitle">Стажировка по направлению Android</string>
    <string name="login_hint">Имя</string>
    <string name="password_hint">Пароль</string>
    <string name="banner_aston">Banner_Aston</string>
    <string name="logo_aston">Logo_Aston</string>
    <string name="title_under_banner">Разработка программного обеспечения</string>
    <string name="sign_in_btn_text">Войти</string>
    <string name="error_text">Неверный пароль</string>
    <string name="home">Главный</string>


    <string name="second_vacancy" translatable="false">SRE Engineer</string>
    <string name="second_vacancy_desc">Админиcтрирование и поддержка кластера Kubernetes</string>
    <string name="third_vacancy" translatable="false">Analyst 1C</string>
    <string name="third_vacancy_desc">Внедрение и поддержка крупных проектов</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="moscow_office_desc">Москва, Россия Пресненская набережная, д.6, стр. 2, БЦ «Башня Империя», 3 подъезд, 53 этаж, офис 13</string>
    <string name="kazan_office_desc">Казань, Россия ул. Н. Ершова, 76/1, оф. 213</string>
    <string name="rostov_office_desc">Ростов-на-Дону, Россия ул. Текучева, 246, 3 этаж</string>
    <string name="minsk_office_desc">Минск, Беларусь пр-т Победителей, 7А</string>
    <string name="gomel_office_desc">Гомель, Беларусь ул. Советская, 41Б</string>
    <string name="login_frag_bar_title">Авторизация</string>
    <string name="main_frag_bar_title">Главная страница</string>
    <string name="vacancy_frad_bar_title">Вакансии</string>
    <string name="offices_frad_bar_title">Офисы</string>
    <string name="Search_text">Поиск</string>

</resources>