<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/small_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/small_margin" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner"
        android:scaleType="fitXY"
        android:contentDescription="@string/banner_aston" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="132dp"
        android:contentDescription="@string/logo_aston"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/title_under_banner"
        android:textColor="@color/main_color_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/subtitle_text"
        android:textColor="@color/main_color_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/main_title"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        app:constraint_referenced_ids="logo, sub_title"
        app:barrierDirection="bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/about_us"
        android:textColor="@color/main_color_text"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/barrier" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description_text"
        android:textColor="@color/main_color_text"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/about_us" />


    <TextView
        android:id="@+id/office_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/office_title"
        android:textColor="@color/main_color_text"
        android:layout_marginTop="@dimen/medium_margin"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/office_title">

        <com.google.android.material.chip.Chip
            android:id="@+id/moscow_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/chips_backgroundTint"
            android:text="@string/moscow"
            android:textColor="@color/main_color_text" />

        <com.google.android.material.chip.Chip
            android:id="@+id/kazan_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/chips_backgroundTint"
            android:text="@string/kazan"
            android:textColor="@color/main_color_text" />

        <com.google.android.material.chip.Chip
            android:id="@+id/rostov_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/chips_backgroundTint"
            android:text="@string/rostov"
            android:textColor="@color/main_color_text"  />

        <com.google.android.material.chip.Chip
            android:id="@+id/minsk_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/chips_backgroundTint"
            android:text="@string/minsk"
            android:textColor="@color/main_color_text" />

        <com.google.android.material.chip.Chip
            android:id="@+id/gomel_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/chips_backgroundTint"
            android:text="@string/gomel"
            android:textColor="@color/main_color_text" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_after_banner"
        android:layout_width="0dp"
        android:layout_height="@dimen/small_margin"
        app:constraint_referenced_ids="chipGroup"
        app:barrierDirection="bottom"
        />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="contacts_btn, vacancies_btn, gallery_btn"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <Button
        android:id="@+id/contacts_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/main_style"
        android:text="@string/contacts_text" />

    <Button
        android:id="@+id/vacancies_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/main_style"
        android:text="@string/vacancies"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/gallery_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/main_style"
        android:text="@string/gallery_btn_text" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/flow_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>