<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/small_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/small_margin" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/banner_aston"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/banner" />

        <Button
            android:id="@+id/sign_in_btn_activity"
            style="@style/main_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/corners_for_btn"
            android:text="@string/sign_in_btn_text"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="132dp"
            android:contentDescription="@string/logo_aston"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/main_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/title_under_banner"
            android:textColor="@color/main_color_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/subtitle_text"
            android:textColor="@color/main_color_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/main_title"
            app:layout_constraintTop_toBottomOf="@+id/main_title" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="logo, sub_title" />

        <TextView
            android:id="@+id/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/about_us"
            android:textColor="@color/main_color_text"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_text"
            android:textColor="@color/main_color_text"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/about_us" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>