<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_margin">


    <ImageView
        android:id="@+id/trainee_logo"
        android:layout_width="100dp"
        android:layout_height="125dp"
        android:contentDescription="@string/trainee_logo_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/trainee_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/main_color_text"
        android:text="@string/trainee_title"
        android:layout_marginTop="24dp"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/trainee_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trainee_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:textColor="@color/main_color_text"
        android:text="@string/trainee_subtitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/trainee_logo"
        app:layout_constraintTop_toBottomOf="@+id/trainee_title" />
</merge>