<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    tools:context=".LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="@dimen/medium_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint"
            android:inputType="textPersonName"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="80dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/tint_password_toggl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"

            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
android:background="@drawable/corners_for_btn"

        android:alpha="0.5"
        android:clickable="false"
        android:text="@string/sign_in_btn_text" />

    <ProgressBar

        android:id="@+id/logofrag_progress"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:visibility="gone" />

</FrameLayout>